<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_sub_id"
    android:orientation="vertical"
    android:background="#f9f9f9"
    tools:context=".views.PasswordRecovery">

    <include layout="@layout/custom_toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/pwd_rec_header"
            android:textColor="@color/header"
            android:textSize="@dimen/txt_size_20"
            android:fontFamily="@font/exo_extrabold" />
        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_below="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pwd_rec_sub_header"
            android:textColor="@color/header"
            android:textSize="@dimen/txt_size_16"
            android:fontFamily="@font/exo_regular" />

        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_warning"
            android:drawablePadding="7dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/you_have_entered_an_incorrect_email_or_password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_size"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/tv_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="0.5dp"
            android:background="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    style="@style/Label_TextView"
                    android:text="@string/email_address" />

                <EditText
                    android:id="@+id/et_email_address"
                    style="@style/Label_EditText"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <View
                    android:id="@+id/email_view"
                    style="@style/Label_ViewLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
            </LinearLayout>

           <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/email_address"
                    android:textAllCaps="true"
                    android:textSize="@dimen/small_bf_size"
                    android:textColor="#202020"
                    android:fontFamily="@font/exo_bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/exo_regular"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="#3B3B3B"
                    android:textColorHint="#A6A6A6"
                    android:textSize="@dimen/txt_size_17" />
                </RelativeLayout>
            </LinearLayout>-->
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_bg_disable"
            android:gravity="center"
            android:text="@string/btn_submit"
            android:textAllCaps="true"
            android:textColor="@color/btn_dis_text"
            android:textSize="@dimen/txt_size_16"
            android:textStyle="bold"
            android:fontFamily="@font/exo_extrabold" />
    </RelativeLayout>
</LinearLayout>
