<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:elevation="0.5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/full_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_bf_size" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/exo_regular"
            android:hint="@string/first_and_last"
            android:inputType="text"
            android:textColor="#202020"
            android:textColorHint="#cacaca"
            android:textSize="@dimen/txt_size_17" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECECEC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:elevation="0.5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/billing_address"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_bf_size" />

        <EditText
            android:id="@+id/etStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/exo_regular"
            android:hint="@string/_street"
            android:inputType="text"
            android:textColor="#202020"
            android:textColorHint="#cacaca"
            android:textSize="@dimen/txt_size_17" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECECEC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:elevation="0.5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/exo_bold"
            android:text="@string/_city"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_bf_size" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/exo_regular"
            android:hint="City"
            android:inputType="text"
            android:textColor="#202020"
            android:textColorHint="#cacaca"
            android:textSize="@dimen/txt_size_17"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECECEC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:elevation="0.5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo_bold"
                android:text="@string/_state"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_bf_size" />

            <Spinner
                android:id="@+id/spnrState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="1dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textAllCaps="true"
                android:textColor="#202020"
                android:textColorHint="#cacaca"
                android:textSize="@dimen/txt_size_17" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ECECEC" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/exo_bold"
                android:text="@string/zip_code"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/small_bf_size" />

            <EditText
                android:id="@+id/etZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/exo_regular"
                android:hint="Zip code"
                android:inputType="number"
                android:textAllCaps="true"
                android:textColor="#202020"
                android:textColorHint="#cacaca"
                android:textSize="@dimen/txt_size_17" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>