<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:orientation="horizontal"
    android:visibility="gone"
    android:id="@+id/banner_ll"
    android:padding="5dp">

    <HorizontalScrollView
        android:id="@+id/horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/notlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:visibility="visible">


                <ImageView
                    android:id="@+id/imageView1"

                    android:layout_width="328dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/banner_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/gettyimage1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="81dp"
                    android:layout_height="81dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="-20dp"
                    android:layout_marginBottom="-20dp"
                    android:contentDescription="@string/dollar_image"
                    android:rotation="20"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_badge_cash" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/exo_bolditalic"
                    android:paddingTop="10dp"
                    android:text="@string/play_for_cash_now"
                    android:textColor="#fff"
                    android:textSize="@dimen/small_size"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/exo_extrabolditalic"
                    android:text="@string/_5_sign_up_bonus"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="#fff"
                    android:textSize="@dimen/txt_size_28"
                    android:textStyle="normal" />


            </FrameLayout>
            <!--<FrameLayout
                android:id="@+id/notlogin1"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginRight="10dp"
                android:visibility="visible">


                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/banner_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_banner_promo" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="-10dp"
                    android:layout_marginBottom="-15dp"
                    android:contentDescription="@string/dollar_image"
                    android:rotation="20"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_badge_cash" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/exo_bolditalic"
                    android:paddingTop="15dp"
                    android:text="@string/play_for_cash_now"
                    android:textColor="#fff"
                    android:textSize="@dimen/small_size"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/exo_extrabolditalic"
                    android:text="@string/_5_sign_up_bonus"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="#fff"
                    android:textSize="@dimen/txt_size_24"
                    android:textStyle="normal" />


            </FrameLayout>
            <FrameLayout
                android:id="@+id/notlogin2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginRight="10dp"
                android:visibility="visible">


                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/banner_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_banner_promo" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="-10dp"
                    android:layout_marginBottom="-15dp"
                    android:contentDescription="@string/dollar_image"
                    android:rotation="20"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_badge_cash" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/exo_bolditalic"
                    android:paddingTop="15dp"
                    android:text="@string/play_for_cash_now"
                    android:textColor="#fff"
                    android:textSize="@dimen/small_size"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/exo_extrabolditalic"
                    android:text="@string/_5_sign_up_bonus"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="#fff"
                    android:textSize="@dimen/txt_size_24"
                    android:textStyle="normal" />


            </FrameLayout>-->
        </LinearLayout>


    </HorizontalScrollView>


</LinearLayout>
